# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../powermgr.gni")
import("//build/ohos/cli/ohos_cli_executable.gni")

ohos_cli_executable("ohos-powerManager") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  cli_config_file = "ohos-powerManager.json"
  include_dirs = [
    "include",
    "${powermgr_inner_api}/native/include",
  ]

  sources = [
    "src/main.cpp",
    "src/power_cli_command.cpp",
    "src/power_cli_enum_parser.cpp",
  ]

  deps = [ "${powermgr_inner_api}:powermgr_client" ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  install_enable = true
  install_images = [ "system" ]

  subsystem_name = "powermgr"
  part_name = "${powermgr_part_name}"
}

group("ohos-powerManager-cli") {
  deps = []
  if (power_manager_feature_support_power_cli) {
    deps += [ ":ohos-powerManager" ]
  }
}
