# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/power_manager/powermgr.gni")

config("private_config") {
  include_dirs = [ "../native/include" ]
}

ohos_shared_library("power_ability") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  sources = [ "power_ability.cpp" ]

  configs = [
    ":private_config",
    "${powermgr_utils_path}:coverage_flags",
  ]

  deps = [ "${powermgr_utils_path}/appmgr:power_appmgr" ]

  external_deps = [
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "hilog:libhilog",
  ]

  subsystem_name = "powermgr"
  part_name = "${powermgr_part_name}"
}
