# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/power_manager/powermgr.gni")

config("private_config") {
  include_dirs = [
    "include",
    "../native/include",
    "//utils/native/base/include",
  ]
}

config("public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("power_setting") {
  sources = [
    "src/power_setting_helper.cpp",
    "src/power_setting_observer.cpp",
  ]

  configs = [ ":private_config" ]

  public_configs = [ ":public_config" ]

  deps = [
    "//foundation/ability/ability_runtime/interfaces/innerkits/dataobs_manager:dataobs_manager",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "dataability:native_dataability",
    "hiviewdfx_hilog_native:libhilog",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  part_name = "${powermgr_native_part_name}"
}
