# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/power_manager/powermgr.gni")

config("private_config") {
  include_dirs = [
    "include",
    "../native/include",
  ]
}

config("public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("power_setting") {
  sources = [
    "src/setting_observer.cpp",
    "src/setting_provider.cpp",
  ]

  configs = [ ":private_config" ]

  public_configs = [ ":public_config" ]

  deps = [ "${ability_runtime_path}/interfaces/inner_api/dataobs_manager:dataobs_manager" ]

  external_deps = [
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "c_utils:utils",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  part_name = "${powermgr_part_name}"
}
