# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/powermgr/power_manager/powermgr.gni")

config("private_config") {
  include_dirs = [
    "include",
    "../native/include",
  ]
}

config("public_config") {
  include_dirs = [ "include" ]
}

ohos_shared_library("power_vibrator") {
  sources = [
    "src/power_vibrator.cpp",
    "src/vibrator_source_parser.cpp",
  ]

  configs = [ ":private_config" ]

  public_configs = [ ":public_config" ]

  external_deps = [
    "c_utils:utils",
    "config_policy:configpolicy_util",
    "hilog:libhilog",
    "jsoncpp:jsoncpp",
  ]
  if (defined(global_parts_info) &&
      defined(global_parts_info.sensors_miscdevice)) {
    defines = [ "POWER_VIBRATOR_MODE_ENABLE" ]
    external_deps += [ "miscdevice:vibrator_interface_native" ]
  }
  subsystem_name = "powermgr"
  part_name = "${powermgr_part_name}"
}
