# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("power_manager_taihe") {
  deps = [
    "power:power_abc_etc",
    "power:power_manager_taihe_native",
    "runninglock:runningLock_etc",
    "runninglock:power_manager_runninglock_taihe_native",
  ]
}

group("power_manager_taihe_test") {
  testonly = true
  deps = [
    "power/test/unittest:power_taihe_native_test",
    "runninglock/test/unittest:runninglock_taihe_native_test",
  ]
}